@@ -106,7 +106,7 @@ public class CTCIMethods {
 	public static String toFullBinaryString(int a) {
 		String s = "";
 		for (int i = 0; i < 32; i++) {
-			Integer lsb = new Integer(a & 1);
+			Integer lsb = Integer.valueOf(a & 1);
 			s = lsb.toString() + s;
 			a = a >> 1;
 		}
